--- a/Views/Person/Index.cshtml
+++ b/Views/Person/Index.cshtml
@@ -11,7 +11,7 @@
   <button type="submit" class="w3-btn w3-blue">Send</button>
    <h1>@ViewBag.thongBao</h1>
    
-</form> <h2>Le Quynh Anh_2021050074</h2>
+</form> <h2></h2>
 
 </div>
 
