--- a/Views/Person/Index.cshtml
+++ b/Views/Person/Index.cshtml
@@ -1,18 +1,41 @@
-<div class="w3-container w3-boder" >
-  <h2>Input Person</h2>
-<form asp-action="Index" class="w3-container" method="post">
-  <p>
-  <label>PersonID:</label>
-  <input class="w3-input" type="text" name="PersonID"></p>
-  <p>
-  <label>PersonName: </label>
-  <input class="w3-input" type="text" name="PersonName"></p>
-  <p>
-  <button type="submit" class="w3-btn w3-blue">Send</button>
-   <h1>@ViewBag.thongBao</h1>
-   
-</form> <h2></h2>
+@model IEnumerable<DemoMVC.Models.Person>
+//Le Quynh Anh_2021050074
+@{
+  ViewData["Title"] = "Index";
+}
 
-</div>
+<h1>Index</h1>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+      <tr>
+          <th>
+                @Html.DisplayNameFor(model => model.Fullname)
+          </th>
+          <th>
+                @Html.DisplayNameFor(model => model.Address)
+          </th>
+          <th></th>
+      </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model){
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.Fullname)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Address)
+        </td>
+        <td>
+          <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a>
+          <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
+          <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
+        </td>
+      </tr>
+}
 
-
+    </tbody>
+</table>
