--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -1,7 +1,35 @@
-<form asp-action="Index">
-  <input type="text" name="studentID" place holder="enter ID"/>
-  <input type="text" name="fullname" place holder ="enter fullname"/>
-  <input type = "submit" value = "send data"/>
-</form>
-<h1>@ViewBag.thongbao</h1>
+@model IEnumerable<DemoMVC.Model.Student>
 
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Fullname)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Fullname)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.StudentID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.StudentID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.StudentID">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
