--- a/MvcMovie/Views/Person/Index.cshtml
+++ b/MvcMovie/Views/Person/Index.cshtml
@@ -6,46 +6,42 @@
 <h1>Index</h1>
 <p>
     <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Download">Download file</a>
 </p>
-<table class="w3-table-all ">
-
+<table class="table">
     <thead>
-      <tr>
-          <th>
-            <tr class="w3-red">
+        <tr>
             <th>
-
+                @Html.DisplayNameFor(model => model.PersonID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FullName)
-          </th>
-          <th>
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Address)
-          </th>
-          <th>
-                @Html.DisplayNameFor(model => model.Age)
-          </th>
-           </th>
+            </th>
             <th></th>
-      </tr>
+        </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+
             <td>
-                @Html.DisplayFor(modelItem => item.FullName)
+                @Html.DisplayFor(modelItem => item.PersonID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Age)
+                @Html.DisplayFor(modelItem => item.FullName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> ||
+                <a asp-action="Edit" asp-route-id="@item.PersonID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PersonID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PersonID">Delete</a>
             </td>
         </tr>
 }
-
-
     </tbody>
 </table>
